--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<p>What is the capital of India?</p>
+	<input type="radio">New Delhi<br>
+	<input type="radio">Mumbai<br>
+	<div>
+		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>		
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
