--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<p>What is the capital of India?</p>
 	<input type="radio">New Delhi<br>
 	<input type="radio">Mumbai<br>
-	<div>
-		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>		
-	</div>
+		<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+  New Delhi is the capital of India and an administrative district of NCT Delhi.
+		</blockquote>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
